# Myai

./: .replit  index.html  main.py  package-lock.json  package.json  pyproject.toml  vercel.json
src/: App.js  README.md  main.js  vite.config.js
