[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "moviepy>=2.1.2",
    "numpy>=2.2.2",
    "opencv-python>=4.11.0.86",
    "pafy>=0.5.5",
    "pydub>=0.25.1",
    "scenedetect>=0.6.5.2",
    "transformers>=4.48.3",
]
